--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "browserify-incremental": "^1.4.0",
     "immutable": "^3.6.2",
     "jquery": "^2.1.3",
-    "react": "^0.12.0",
+    "react": "^0.13.2",
     "react-immutable-render-mixin": "^0.8.0",
     "react-intl": "^1.1.0",
     "react-tools": "^0.12.1",
     "reactify": "^0.17.1",
-    "reflux": "^0.2.7"
+    "reflux": "^0.2.7",
+    "material-ui": "0.7.5"
   },
   "engines": {
     "node": ">=0.10.0"
